add ogp value for characters

--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="ja">
+  <head refix="og: http://ogp.me/ns#">
     <meta charset="UTF-8" />
     <link rel="icon" href="/src/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vinsanet</title>
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="vinsanet" />
+    <meta property="og:description" content="vinsanet | Kutulu TRPGキャラクターシート" />
+    <meta property="og:url" content="https://vinsanet-trpg-staging.firebaseapp.com" />
+    <meta property="og:site_name" content="vinsanet" />
+    <meta
+      property="og:image"
+      content="https://firebasestorage.googleapis.com/v0/b/vinsanet-trpg.appspot.com/o/logos%2Flogo.png?alt=media&token=f098e5a9-4eaf-4b26-b98e-6315403d8c91&_gl=1*dykf3s*_ga*Mjk5NzA0MjA2LjE2ODc1MTk3Njg.*_ga_CW55HF8NVT*MTY5Njc0NjkxMS42Ny4xLjE2OTY3NDk5NDQuMzkuMC4w"
+    />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@vinsanet_trpg" />
+    <meta name="twitter:creator" content="@hnymA" />
   </head>
-
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
