--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>vinsanet</title>
     <meta property="og:type" content="article" />
     <meta property="og:title" content="vinsanet" />
-    <meta property="og:description" content="vinsanet | Kutulu TRPGキャラクターシート" />
+    <meta property="og:description" content="vinsanet | Kutulu TRPGキャラシツール" />
     <meta property="og:url" content="https://vinsanet-trpg-staging.firebaseapp.com" />
     <meta property="og:site_name" content="vinsanet" />
     <meta
