update ogp logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:site_name" content="vinsanet" />
     <meta
       property="og:image"
-      content="https://firebasestorage.googleapis.com/v0/b/vinsanet-trpg.appspot.com/o/logos%2Flogo.png?alt=media&token=f098e5a9-4eaf-4b26-b98e-6315403d8c91&_gl=1*dykf3s*_ga*Mjk5NzA0MjA2LjE2ODc1MTk3Njg.*_ga_CW55HF8NVT*MTY5Njc0NjkxMS42Ny4xLjE2OTY3NDk5NDQuMzkuMC4w"
+      content="https://firebasestorage.googleapis.com/v0/b/vinsanet-trpg.appspot.com/o/logos%2Flogo_white.png?alt=media&token=b257b1cd-cf2e-4eb7-91f6-63879db4f672"
     />
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@vinsanet_trpg" />
