--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="vinsanet" />
     <meta property="og:description" content="vinsanet | Kutulu TRPGキャラシツール" />
-    <meta property="og:url" content="https://vinsanet-trpg-staging.firebaseapp.com" />
+    <meta property="og:url" content="https://vinsanet.com" />
     <meta property="og:site_name" content="vinsanet" />
     <meta
       property="og:image"
